# trip-planner-assistant

./: README.md
.github/workflows/: ci-cd.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py
backend/app/agents/: graph.py  state.py  tools.py
backend/app/agents/nodes/: attraction_node.py  hotel_node.py  planner_node.py  weather_node.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routes/: auth.py  trip_v2.py
backend/app/core/: exceptions.py  logging.py  security.py
backend/app/db/: base.py
backend/app/models/: database.py
backend/app/services/: amap_service.py  cache_service.py  llm_service.py  trip_planning_service.py
backend/docker/: Dockerfile  docker-compose.yml  prometheus.yml
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_cache_service.py
frontend/: package.json
frontend/src/: App.vue
